objects/CovidCaseVisibilitySetting__mdt.object
<CustomObject>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <inlineHelpText>Please include API name with &quot;__c&quot;.</inlineHelpText>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Ready_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Ready Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SectionAndUserAccessOnCovidCase__c</fullName>
        <label>Section And User Access On Covid Case</label>
        <referenceTo>SectionAndUserAccessOnCovidCase__mdt</referenceTo>
        <relationshipName>CovidCaseVisibilitySetting</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Sort_Number__c</fullName>
        <label>Sort Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Covid Case Visibility Setting</label>
    <listViews>
        <fullName>All_Info</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Field_API_Name__c</columns>
        <columns>SectionAndUserAccessOnCovidCase__c</columns>
        <columns>Sort_Number__c</columns>
        <columns>Is_Ready_Only__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Info</label>
    </listViews>
    <listViews>
        <fullName>Calc_Input</fullName>
        <columns>MasterLabel</columns>
        <columns>Sort_Number__c</columns>
        <columns>DeveloperName</columns>
        <columns>Field_API_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SectionAndUserAccessOnCovidCase__c</field>
            <operation>contains</operation>
            <value>calculator</value>
        </filters>
        <label>Calc Input</label>
    </listViews>
    <listViews>
        <fullName>Sye_Info</fullName>
        <columns>MasterLabel</columns>
        <columns>Sort_Number__c</columns>
        <columns>DeveloperName</columns>
        <columns>Field_API_Name__c</columns>
        <columns>SectionAndUserAccessOnCovidCase__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SectionAndUserAccessOnCovidCase__c</field>
            <operation>contains</operation>
            <value>System</value>
        </filters>
        <label>Sye Info</label>
    </listViews>
    <pluralLabel>CovidCaseVisibilitySetting</pluralLabel>
</CustomObject>